[package]
name = "rust-mongo-blog"
version = "0.1.0"
authors = ["xujiyou <xujiyou555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
bytes = "0.4"
futures = "0.1"
env_logger = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

mongodb = "0.3.11"

chrono = "0.4"
